[gd_scene load_steps=14 format=3 uid="uid://d11v36qoctfir"]

[ext_resource type="Script" uid="uid://pjee6ch6gt5l" path="res://enemigos/enemigos.gd" id="1_bvf6m"]
[ext_resource type="Texture2D" uid="uid://duglh306v83m8" path="res://assets/Hana Caraka - Base Character [sample]/walk.png" id="2_dnjyr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0e48y"]
atlas = ExtResource("2_dnjyr")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_epypp"]
atlas = ExtResource("2_dnjyr")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hol4"]
atlas = ExtResource("2_dnjyr")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6r6c"]
atlas = ExtResource("2_dnjyr")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdubu"]
atlas = ExtResource("2_dnjyr")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d21ai"]
atlas = ExtResource("2_dnjyr")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj586"]
atlas = ExtResource("2_dnjyr")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7sh"]
atlas = ExtResource("2_dnjyr")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_ir8iy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e48y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epypp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hol4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6r6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d21ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj586")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqns4"]
size = Vector2(13, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvf6m"]
size = Vector2(10, 14)

[node name="hongo" type="CharacterBody2D"]
light_mask = 3
visibility_layer = 3
collision_layer = 4
script = ExtResource("1_bvf6m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ir8iy")
frame_progress = 0.659688

[node name="FloorDetection" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(8, 2)
target_position = Vector2(0, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hqns4")

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(-13, 0)

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(13, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_bvf6m")
